objects/Fridge_Reading_History__b.object
<CustomObject><fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Door__c</fullName>
        <label>Door</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>10</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><deploymentStatus>Deployed</deploymentStatus><label>Fridge Reading History</label><pluralLabel>Fridge Readings History</pluralLabel></CustomObject>